include twitterrific domain

--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -29,7 +29,7 @@ DOMAIN-KEYWORD,bbc,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-06-03 01:14:26
+// updated on 2016-06-03 14:26:49
 
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,syndication,REJECT
@@ -234,7 +234,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2016-06-03 01:14:18
+// updated on 2016-06-03 14:26:44
 
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,85.17.73.31,Proxy,force-remote-dns
@@ -288,6 +288,7 @@ DOMAIN-SUFFIX,www.hustlercash.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hybrid-analysis.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ilovelongtoes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imgmega.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,imgur.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,javhub.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,javhuge.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,javlibrary.com,Proxy,force-remote-dns
@@ -1243,6 +1244,7 @@ DOMAIN-SUFFIX,dns2go.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dnssec.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,doctorvoice.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dogfartnetwork.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gloryhole.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dojin.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dok-forum.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dolc.de,Proxy,force-remote-dns
@@ -1769,7 +1771,9 @@ DOMAIN-SUFFIX,greenvpn.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gs-discuss.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gtricks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,guancha.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,guardster.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gun-world.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gunsandammo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gutteruncensored.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gvm.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gzm.tv,Proxy,force-remote-dns
@@ -1832,6 +1836,7 @@ DOMAIN-SUFFIX,hec.su,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hecaitou.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hechaji.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,heeact.edu.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hegre-art.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cdn.helixstudios.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helplinfen.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helloandroid.com,Proxy,force-remote-dns
@@ -1842,6 +1847,8 @@ DOMAIN-SUFFIX,hellouk.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helpeachpeople.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helpster.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helpzhuling.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hentaitube.tv,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hentaivideoworld.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,date.fm,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flightcaster.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,branch.com,Proxy,force-remote-dns
@@ -1875,11 +1882,11 @@ DOMAIN-SUFFIX,hi-on.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hidden-advent.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hidecloud.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hide.me,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hideipvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hideman.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hideme.nl,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hidemyass.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hidemycomp.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,hideipvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hihiforum.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hihistory.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,higfw.com,Proxy,force-remote-dns
@@ -1887,10 +1894,15 @@ DOMAIN-SUFFIX,highpeakspureearth.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,highrockmedia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hiitch.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hikinggfw.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hilive.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,himalayan-foundation.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,himalayanglacier.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,himemix.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,himemix.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,times.hinet.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hizbuttahrir.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hizb-ut-tahrir.info,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hizb-ut-tahrir.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hjclub.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hk-pub.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hk01.com,Proxy,force-remote-dns
@@ -1935,6 +1947,7 @@ DOMAIN-SUFFIX,hola.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hola.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,holyspiritspeaks.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,derekhsu.homeip.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,homeperversion.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,homeservershow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,old.honeynet.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hongkongfp.com,Proxy,force-remote-dns
@@ -1944,14 +1957,18 @@ DOMAIN-SUFFIX,hootsuite.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hopto.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hornygamer.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hotav.tv,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hotfrog.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hotgoo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hotpornshow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hotpot.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hotshame.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hotspotshield.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hotvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hougaige.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,howtoforge.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hqcdp.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hqjapanesesex.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hqmovies.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hrcir.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hrcchina.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hrea.org,Proxy,force-remote-dns
@@ -1961,6 +1978,7 @@ DOMAIN-SUFFIX,hrweb.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hsjp.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hsselite.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hst.net.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hstern.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hstt.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,htkou.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,htmldog.com,Proxy,force-remote-dns
@@ -1986,29 +2004,33 @@ DOMAIN-SUFFIX,hurriyet.com.tr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hut2.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hutianyi.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hutong9.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,huyandex.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hwayue.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hwinfo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fang-lizhi.hxwk.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hxwq.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hyperrate.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,i-cable.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,i-part.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,i1.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,i2p2.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,i2runner.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,i818hk.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,i-cable.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,i-part.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iask.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iask.bz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ibiblio.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,iblist.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iblogserv-f.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ibros.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cn.ibtimes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ibvpn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,icams.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blogs.icerocket.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,icij.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,icl-fi.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,icoco.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,iconfactory.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,furbo.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,warbler.iconfactory.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iconpaper.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,icu-project.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,w.idaiwan.com,Proxy,force-remote-dns
@@ -2032,7 +2054,9 @@ DOMAIN-SUFFIX,ift.tt,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ifreewares.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,igcd.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,igfw.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,igmg.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ignitedetroit.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,igotmail.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,igvita.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ihakka.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ihao.org,Proxy,force-remote-dns
@@ -2052,9 +2076,13 @@ DOMAIN-SUFFIX,imdb.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,img.ly,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imkev.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,imlive.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,immoral.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,impact.org.au,Proxy,force-remote-dns
 DOMAIN-SUFFIX,impp.mn,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tech2.in.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,in99.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,in-disguise.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,incloak.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,incredibox.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,indiandefensenews.in,Proxy,force-remote-dns
 DOMAIN-SUFFIX,timesofindia.indiatimes.com,Proxy,force-remote-dns
@@ -2062,12 +2090,14 @@ DOMAIN-SUFFIX,indiemerch.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,info-graf.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,website.informer.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,initiativesforchina.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,inkui.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,inmediahk.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,innermongolia.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.inoreader.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,inote.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,insecam.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,instagram.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,institut-tibetain.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,interfaceaddiction.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,internationalrivers.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,internet.org,Proxy,force-remote-dns
@@ -2082,9 +2112,11 @@ DOMAIN-SUFFIX,iphonehacks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iphonetaiwan.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iphonix.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ipicture.ru,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ipjetable.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iportal.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ippotv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ipredator.se,Proxy,force-remote-dns
+DOMAIN-SUFFIX,iptv.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ipvanish.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iredmail.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chinese.irib.ir,Proxy,force-remote-dns
@@ -2096,7 +2128,9 @@ DOMAIN-SUFFIX,beta.iset.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,forum.iset.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,islam.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,islamawareness.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,islamhouse.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,islamicity.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,islamtoday.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,isaacmao.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,isgreat.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ismaelan.com,Proxy,force-remote-dns
@@ -2129,8 +2163,10 @@ DOMAIN-SUFFIX,iyouport.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,izaobao.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gmozomg.izihost.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,izles.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,izlesem.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,j.mp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.jackjia.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,jamaat.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jamyangnorbu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,janwongphoto.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,japan-whores.com,Proxy,force-remote-dns
@@ -2167,6 +2203,7 @@ DOMAIN-SUFFIX,ac.jiruan.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jitouch.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jizzthis.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jjgirls.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,jkb.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jkforum.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jma.go.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,research.jmsc.hku.hk,Proxy,force-remote-dns
@@ -2174,6 +2211,7 @@ DOMAIN-SUFFIX,weiboscope.jmsc.hku.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,joachims.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jobso.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,joeedelman.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,journalchretien.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,journalofdemocracy.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jpopforum.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,juhuaren.com,Proxy,force-remote-dns
@@ -2198,11 +2236,13 @@ DOMAIN-SUFFIX,kannewyork.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kanshifang.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kanzhongguo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kanzhongguo.eu,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kaotic.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,karayou.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,karkhung.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,karmapa.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,karmapa-teachings.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kba-tx.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kcoolonline.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kcsoftwares.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kebrum.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kechara.com,Proxy,force-remote-dns
@@ -2236,6 +2276,7 @@ DOMAIN-SUFFIX,koornk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,koranmandarin.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gojet.krtco.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ksnews.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ktzhk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kui.name,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kun.im,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kurashsultan.com,Proxy,force-remote-dns
@@ -2262,6 +2303,7 @@ DOMAIN-SUFFIX,laoyang.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,laptoplockdown.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,laqingdan.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,larsgeorge.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,lastcombat.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lastfm.es,Proxy,force-remote-dns
 DOMAIN-SUFFIX,latelinenews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,latibet.org,Proxy,force-remote-dns
@@ -3464,6 +3506,7 @@ DOMAIN-SUFFIX,tibetan.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetan-alliance.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetanarts.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetanbuddhistinstitute.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tibetanlanguage.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetanliberation.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetcollection.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetanaidproject.org,Proxy,force-remote-dns
@@ -3703,6 +3746,7 @@ DOMAIN-SUFFIX,twitterfeed.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twittergadget.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twitterkr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twittermail.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twitterrific.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twittertim.es,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twitthat.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twitturk.com,Proxy,force-remote-dns
