--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -26,7 +26,7 @@ DOMAIN-SUFFIX,cn,ChinaProxy
 
 // AD Block
 // thx  https://gist.github.com/iyee/2e27c124af2f7a4f0d5a 
-// updated on 2016-06-03 01:14:26
+// updated on 2016-06-07 20:38:58
 
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,syndication,REJECT
@@ -230,7 +230,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 
 // white list from dnsmasq_china_list!
-// updated on 2016-06-03 01:14:45
+// updated on 2016-06-07 20:39:06
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -1189,6 +1189,7 @@ DOMAIN-SUFFIX,13800.net,ChinaProxy
 DOMAIN-SUFFIX,138085.com,ChinaProxy
 DOMAIN-SUFFIX,138292.com,ChinaProxy
 DOMAIN-SUFFIX,138edu.com,ChinaProxy
+DOMAIN-SUFFIX,138gzs.com,ChinaProxy
 DOMAIN-SUFFIX,138jm.com,ChinaProxy
 DOMAIN-SUFFIX,138job.com,ChinaProxy
 DOMAIN-SUFFIX,138mr.com,ChinaProxy
@@ -1400,6 +1401,7 @@ DOMAIN-SUFFIX,175ha.com,ChinaProxy
 DOMAIN-SUFFIX,175kh.com,ChinaProxy
 DOMAIN-SUFFIX,175pt.com,ChinaProxy
 DOMAIN-SUFFIX,175pt.net,ChinaProxy
+DOMAIN-SUFFIX,175wan.com,ChinaProxy
 DOMAIN-SUFFIX,175y.com,ChinaProxy
 DOMAIN-SUFFIX,176.com,ChinaProxy
 DOMAIN-SUFFIX,17611.com,ChinaProxy
@@ -1976,6 +1978,7 @@ DOMAIN-SUFFIX,26youxi.com,ChinaProxy
 DOMAIN-SUFFIX,5.com,ChinaProxy
 DOMAIN-SUFFIX,270top.com,ChinaProxy
 DOMAIN-SUFFIX,27144.com,ChinaProxy
+DOMAIN-SUFFIX,2727u.com,ChinaProxy
 DOMAIN-SUFFIX,272xb.com,ChinaProxy
 DOMAIN-SUFFIX,27486666.com,ChinaProxy
 DOMAIN-SUFFIX,279wo.com,ChinaProxy
@@ -2527,6 +2530,7 @@ DOMAIN-SUFFIX,3911.com,ChinaProxy
 DOMAIN-SUFFIX,391k.com,ChinaProxy
 DOMAIN-SUFFIX,391la.com,ChinaProxy
 DOMAIN-SUFFIX,3937.com,ChinaProxy
+DOMAIN-SUFFIX,3944540.com,ChinaProxy
 DOMAIN-SUFFIX,39655.com,ChinaProxy
 DOMAIN-SUFFIX,3975.com,ChinaProxy
 DOMAIN-SUFFIX,3987.com,ChinaProxy
@@ -5592,6 +5596,7 @@ DOMAIN-SUFFIX,adchina.com,ChinaProxy
 DOMAIN-SUFFIX,adchitu.net,ChinaProxy
 DOMAIN-SUFFIX,adconfer.com,ChinaProxy
 DOMAIN-SUFFIX,adcoonfer.com,ChinaProxy
+DOMAIN-SUFFIX,addons.cdn,ChinaProxy
 DOMAIN-SUFFIX,addpv.com,ChinaProxy
 DOMAIN-SUFFIX,adeqo.com,ChinaProxy
 DOMAIN-SUFFIX,adfarm.mediaplex,ChinaProxy
@@ -6825,6 +6830,7 @@ DOMAIN-SUFFIX,baihe.com,ChinaProxy
 DOMAIN-SUFFIX,baihei.net,ChinaProxy
 DOMAIN-SUFFIX,baihuakm.com,ChinaProxy
 DOMAIN-SUFFIX,baihui.com,ChinaProxy
+DOMAIN-SUFFIX,baihuoke.com,ChinaProxy
 DOMAIN-SUFFIX,baiila.com,ChinaProxy
 DOMAIN-SUFFIX,baijiegroup.com,ChinaProxy
 DOMAIN-SUFFIX,baijiexiu.com,ChinaProxy
@@ -6935,6 +6941,7 @@ DOMAIN-SUFFIX,bangyanglasses.com,ChinaProxy
 DOMAIN-SUFFIX,bangyike.com,ChinaProxy
 DOMAIN-SUFFIX,bangyouit.com,ChinaProxy
 DOMAIN-SUFFIX,banjiajia.com,ChinaProxy
+DOMAIN-SUFFIX,banjiamao.com,ChinaProxy
 DOMAIN-SUFFIX,china.com,ChinaProxy
 DOMAIN-SUFFIX,bankcomm.com,ChinaProxy
 DOMAIN-SUFFIX,bankgz.com,ChinaProxy
@@ -7111,6 +7118,7 @@ DOMAIN-SUFFIX,bbyckj.com,ChinaProxy
 DOMAIN-SUFFIX,bbzhi.com,ChinaProxy
 DOMAIN-SUFFIX,bc797.com,ChinaProxy
 DOMAIN-SUFFIX,bcactc.com,ChinaProxy
+DOMAIN-SUFFIX,bcbvi.com,ChinaProxy
 DOMAIN-SUFFIX,bccfw.com,ChinaProxy
 DOMAIN-SUFFIX,bccn.net,ChinaProxy
 DOMAIN-SUFFIX,bccv.com,ChinaProxy
@@ -9776,6 +9784,7 @@ DOMAIN-SUFFIX,ckd.cc,ChinaProxy
 DOMAIN-SUFFIX,ckd.im,ChinaProxy
 DOMAIN-SUFFIX,ckdzb.com,ChinaProxy
 DOMAIN-SUFFIX,ckefu.com,ChinaProxy
+DOMAIN-SUFFIX,ckernel.org,ChinaProxy
 DOMAIN-SUFFIX,ckimg.com,ChinaProxy
 DOMAIN-SUFFIX,ckjunshi.com,ChinaProxy
 DOMAIN-SUFFIX,ckkcc.com,ChinaProxy
@@ -11400,6 +11409,7 @@ DOMAIN-SUFFIX,dearedu.com,ChinaProxy
 DOMAIN-SUFFIX,dearmefashion.com,ChinaProxy
 DOMAIN-SUFFIX,deazsd.com,ChinaProxy
 DOMAIN-SUFFIX,debao.com,ChinaProxy
+DOMAIN-SUFFIX,debiancn.org,ChinaProxy
 DOMAIN-SUFFIX,debugtbs.cc,ChinaProxy
 DOMAIN-SUFFIX,decard.com,ChinaProxy
 DOMAIN-SUFFIX,decentcapital.com,ChinaProxy
@@ -11682,6 +11692,7 @@ DOMAIN-SUFFIX,diku8.com,ChinaProxy
 DOMAIN-SUFFIX,dili360.com,ChinaProxy
 DOMAIN-SUFFIX,dilidili.com,ChinaProxy
 DOMAIN-SUFFIX,dilidili.tv,ChinaProxy
+DOMAIN-SUFFIX,dilili.net,ChinaProxy
 DOMAIN-SUFFIX,dimeng.net,ChinaProxy
 DOMAIN-SUFFIX,dimg.cc,ChinaProxy
 DOMAIN-SUFFIX,dimgcn.s,ChinaProxy
@@ -11811,6 +11822,7 @@ DOMAIN-SUFFIX,dksrcw.com,ChinaProxy
 DOMAIN-SUFFIX,dktime.org,ChinaProxy
 DOMAIN-SUFFIX,dky.cc,ChinaProxy
 DOMAIN-SUFFIX,mec.com,ChinaProxy
+DOMAIN-SUFFIX,origin.ubnt,ChinaProxy
 DOMAIN-SUFFIX,dl.delivery,ChinaProxy
 DOMAIN-SUFFIX,dl.google,ChinaProxy
 DOMAIN-SUFFIX,dl1234.com,ChinaProxy
@@ -13174,6 +13186,7 @@ DOMAIN-SUFFIX,facang.com,ChinaProxy
 DOMAIN-SUFFIX,face100.net,ChinaProxy
 DOMAIN-SUFFIX,faceboer.com,ChinaProxy
 DOMAIN-SUFFIX,facee.org,ChinaProxy
+DOMAIN-SUFFIX,faceid.com,ChinaProxy
 DOMAIN-SUFFIX,faceplusplus.com,ChinaProxy
 DOMAIN-SUFFIX,faceu.mobi,ChinaProxy
 DOMAIN-SUFFIX,faceui.com,ChinaProxy
@@ -14031,6 +14044,7 @@ DOMAIN-SUFFIX,gamehui.com,ChinaProxy
 DOMAIN-SUFFIX,gamejob.net,ChinaProxy
 DOMAIN-SUFFIX,gameloog.com,ChinaProxy
 DOMAIN-SUFFIX,gameol.com,ChinaProxy
+DOMAIN-SUFFIX,gamepf.com,ChinaProxy
 DOMAIN-SUFFIX,gamept.com,ChinaProxy
 DOMAIN-SUFFIX,gamer84.com,ChinaProxy
 DOMAIN-SUFFIX,gamerboom.com,ChinaProxy
@@ -14381,6 +14395,7 @@ DOMAIN-SUFFIX,gkplay.com,ChinaProxy
 DOMAIN-SUFFIX,gkstk.com,ChinaProxy
 DOMAIN-SUFFIX,gkwiki.net,ChinaProxy
 DOMAIN-SUFFIX,gkz6.net,ChinaProxy
+DOMAIN-SUFFIX,gkzhan.com,ChinaProxy
 DOMAIN-SUFFIX,data.com,ChinaProxy
 DOMAIN-SUFFIX,hoyun.com,ChinaProxy
 DOMAIN-SUFFIX,gl154.com,ChinaProxy
@@ -15648,6 +15663,7 @@ DOMAIN-SUFFIX,heyang.cc,ChinaProxy
 DOMAIN-SUFFIX,heyi.com,ChinaProxy
 DOMAIN-SUFFIX,heyinguanli.com,ChinaProxy
 DOMAIN-SUFFIX,heylinux.com,ChinaProxy
+DOMAIN-SUFFIX,heymore.com,ChinaProxy
 DOMAIN-SUFFIX,heyuchan.com,ChinaProxy
 DOMAIN-SUFFIX,heyunchou.com,ChinaProxy
 DOMAIN-SUFFIX,heyuyhw.com,ChinaProxy
@@ -18487,6 +18503,7 @@ DOMAIN-SUFFIX,bank.com,ChinaProxy
 DOMAIN-SUFFIX,jn001.com,ChinaProxy
 DOMAIN-SUFFIX,jn178.com,ChinaProxy
 DOMAIN-SUFFIX,jnbbbyy.com,ChinaProxy
+DOMAIN-SUFFIX,jndehang.com,ChinaProxy
 DOMAIN-SUFFIX,jndwyy.com,ChinaProxy
 DOMAIN-SUFFIX,jnecw.com,ChinaProxy
 DOMAIN-SUFFIX,jnesc.com,ChinaProxy
@@ -20221,6 +20238,7 @@ DOMAIN-SUFFIX,li63.com,ChinaProxy
 DOMAIN-SUFFIX,liageren.com,ChinaProxy
 DOMAIN-SUFFIX,lianaibashi.com,ChinaProxy
 DOMAIN-SUFFIX,lianaibiji.com,ChinaProxy
+DOMAIN-SUFFIX,lianbijr.com,ChinaProxy
 DOMAIN-SUFFIX,liangchan.net,ChinaProxy
 DOMAIN-SUFFIX,liangjan.com,ChinaProxy
 DOMAIN-SUFFIX,liangjian.com,ChinaProxy
@@ -22933,6 +22951,7 @@ DOMAIN-SUFFIX,nuoyanet.com,ChinaProxy
 DOMAIN-SUFFIX,nuqk.com,ChinaProxy
 DOMAIN-SUFFIX,nushai.com,ChinaProxy
 DOMAIN-SUFFIX,nutscn.com,ChinaProxy
+DOMAIN-SUFFIX,nuubao.com,ChinaProxy
 DOMAIN-SUFFIX,nuuren.com,ChinaProxy
 DOMAIN-SUFFIX,nuuxie.com,ChinaProxy
 DOMAIN-SUFFIX,nuxue.com,ChinaProxy
@@ -23288,6 +23307,7 @@ DOMAIN-SUFFIX,ourlinc.com,ChinaProxy
 DOMAIN-SUFFIX,ourseo.net,ChinaProxy
 DOMAIN-SUFFIX,ourtra.com,ChinaProxy
 DOMAIN-SUFFIX,ourtxt.net,ChinaProxy
+DOMAIN-SUFFIX,ourwebat.com,ChinaProxy
 DOMAIN-SUFFIX,ourwebcdn.com,ChinaProxy
 DOMAIN-SUFFIX,ourwebcdn.net,ChinaProxy
 DOMAIN-SUFFIX,ourwebpic.com,ChinaProxy
@@ -24208,6 +24228,7 @@ DOMAIN-SUFFIX,qianhuaweb.com,ChinaProxy
 DOMAIN-SUFFIX,qianjia.com,ChinaProxy
 DOMAIN-SUFFIX,qianjing.com,ChinaProxy
 DOMAIN-SUFFIX,qianka.com,ChinaProxy
+DOMAIN-SUFFIX,qianlaif.com,ChinaProxy
 DOMAIN-SUFFIX,qianlibao666.com,ChinaProxy
 DOMAIN-SUFFIX,qianligu.org,ChinaProxy
 DOMAIN-SUFFIX,qianlima.com,ChinaProxy
@@ -25946,6 +25967,7 @@ DOMAIN-SUFFIX,shipgce.com,ChinaProxy
 DOMAIN-SUFFIX,shiqichan.com,ChinaProxy
 DOMAIN-SUFFIX,shiqu.io,ChinaProxy
 DOMAIN-SUFFIX,shiseapp.com,ChinaProxy
+DOMAIN-SUFFIX,shishagame.com,ChinaProxy
 DOMAIN-SUFFIX,shishanghezi.com,ChinaProxy
 DOMAIN-SUFFIX,shisuint.org,ChinaProxy
 DOMAIN-SUFFIX,shitingad.com,ChinaProxy
@@ -26704,6 +26726,7 @@ DOMAIN-SUFFIX,soufoo.com,ChinaProxy
 DOMAIN-SUFFIX,soufun.com,ChinaProxy
 DOMAIN-SUFFIX,soufunimg.com,ChinaProxy
 DOMAIN-SUFFIX,souge.cc,ChinaProxy
+DOMAIN-SUFFIX,souho.net,ChinaProxy
 DOMAIN-SUFFIX,souhudy.com,ChinaProxy
 DOMAIN-SUFFIX,souid.com,ChinaProxy
 DOMAIN-SUFFIX,souidc.org,ChinaProxy
@@ -27578,6 +27601,7 @@ DOMAIN-SUFFIX,tburl.net,ChinaProxy
 DOMAIN-SUFFIX,fuzhuang.com,ChinaProxy
 DOMAIN-SUFFIX,hufu.com,ChinaProxy
 DOMAIN-SUFFIX,xie.com,ChinaProxy
+DOMAIN-SUFFIX,tbwfy.com,ChinaProxy
 DOMAIN-SUFFIX,tbxt.com,ChinaProxy
 DOMAIN-SUFFIX,ds2000.com,ChinaProxy
 DOMAIN-SUFFIX,tc600.com,ChinaProxy
@@ -30263,6 +30287,7 @@ DOMAIN-SUFFIX,wodai.com,ChinaProxy
 DOMAIN-SUFFIX,wode.im,ChinaProxy
 DOMAIN-SUFFIX,wodecrowd.com,ChinaProxy
 DOMAIN-SUFFIX,wodedy.com,ChinaProxy
+DOMAIN-SUFFIX,wodeoffice.com,ChinaProxy
 DOMAIN-SUFFIX,wodeshebao.com,ChinaProxy
 DOMAIN-SUFFIX,wodiancan.net,ChinaProxy
 DOMAIN-SUFFIX,wodingche.com,ChinaProxy
@@ -30559,6 +30584,7 @@ DOMAIN-SUFFIX,wwwljw408.com,ChinaProxy
 DOMAIN-SUFFIX,wwwquan.com,ChinaProxy
 DOMAIN-SUFFIX,wwwwang.com,ChinaProxy
 DOMAIN-SUFFIX,wwwwasher.com,ChinaProxy
+DOMAIN-SUFFIX,wx135.com,ChinaProxy
 DOMAIN-SUFFIX,wx521.net,ChinaProxy
 DOMAIN-SUFFIX,wx8s.com,ChinaProxy
 DOMAIN-SUFFIX,wxb.com,ChinaProxy
@@ -33608,6 +33634,7 @@ DOMAIN-SUFFIX,zhifang.com,ChinaProxy
 DOMAIN-SUFFIX,zhifubao.com,ChinaProxy
 DOMAIN-SUFFIX,zhifujie.com,ChinaProxy
 DOMAIN-SUFFIX,zhige.net,ChinaProxy
+DOMAIN-SUFFIX,zhigou.com,ChinaProxy
 DOMAIN-SUFFIX,zhihu.com,ChinaProxy
 DOMAIN-SUFFIX,zhihuangjin.com,ChinaProxy
 DOMAIN-SUFFIX,zhihuisky.com,ChinaProxy
@@ -34016,6 +34043,7 @@ DOMAIN-SUFFIX,zjyez.com,ChinaProxy
 DOMAIN-SUFFIX,zjypw.com,ChinaProxy
 DOMAIN-SUFFIX,zjzffz.com,ChinaProxy
 DOMAIN-SUFFIX,zjzg.com,ChinaProxy
+DOMAIN-SUFFIX,zk528.com,ChinaProxy
 DOMAIN-SUFFIX,zk71.com,ChinaProxy
 DOMAIN-SUFFIX,zkbaoliao.com,ChinaProxy
 DOMAIN-SUFFIX,zkcx.com,ChinaProxy
