--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -1,4 +1,5 @@
 [General]
+bypass-system = true
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local
 bypass-tun = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
 dns-server = 115.29.49.136
@@ -21,6 +22,8 @@ Proxy = select,💊DIRECT,@Auto,🇭🇰HK,🇸🇬SG,🇯🇵JP,🇺🇸US
 
 
 [Rule]
+// For apple inc
+IP-CIDR, 17.0.0.0/8, DIRECT, no-resolve
 // For cn domains
 DOMAIN-SUFFIX,cn,ChinaProxy
 
@@ -229,7 +232,7 @@ DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 
 
 // white list from dnsmasq_china_list!
-// updated on 2016-06-27 17:23:41
+// updated on 2016-07-02 21:49:46
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -965,6 +968,7 @@ DOMAIN-SUFFIX,11464.com,ChinaProxy
 DOMAIN-SUFFIX,11467.com,ChinaProxy
 DOMAIN-SUFFIX,114admall.com,ChinaProxy
 DOMAIN-SUFFIX,114best.com,ChinaProxy
+DOMAIN-SUFFIX,114cb.com,ChinaProxy
 DOMAIN-SUFFIX,114cbd.com,ChinaProxy
 DOMAIN-SUFFIX,114chn.com,ChinaProxy
 DOMAIN-SUFFIX,114cnbaiducom.com,ChinaProxy
@@ -6594,6 +6598,7 @@ DOMAIN-SUFFIX,atc18.com,ChinaProxy
 DOMAIN-SUFFIX,atelier39.org,ChinaProxy
 DOMAIN-SUFFIX,atf.com,ChinaProxy
 DOMAIN-SUFFIX,atguigu.com,ChinaProxy
+DOMAIN-SUFFIX,atianqi.com,ChinaProxy
 DOMAIN-SUFFIX,atido.com,ChinaProxy
 DOMAIN-SUFFIX,atime.me,ChinaProxy
 DOMAIN-SUFFIX,atimg.com,ChinaProxy
@@ -9037,6 +9042,7 @@ DOMAIN-SUFFIX,chenpeng.info,ChinaProxy
 DOMAIN-SUFFIX,chenqichao.me,ChinaProxy
 DOMAIN-SUFFIX,chenqiwei.com,ChinaProxy
 DOMAIN-SUFFIX,chenruixuan.com,ChinaProxy
+DOMAIN-SUFFIX,chenshaoju.com,ChinaProxy
 DOMAIN-SUFFIX,chenwang.net,ChinaProxy
 DOMAIN-SUFFIX,chenxublog.com,ChinaProxy
 DOMAIN-SUFFIX,chenxuehu.com,ChinaProxy
@@ -12676,6 +12682,7 @@ DOMAIN-SUFFIX,easymorse.com,ChinaProxy
 DOMAIN-SUFFIX,easyreadtech.com,ChinaProxy
 DOMAIN-SUFFIX,easyrecovery.cc,ChinaProxy
 DOMAIN-SUFFIX,easyrecoverycn.com,ChinaProxy
+DOMAIN-SUFFIX,easysaving.ca,ChinaProxy
 DOMAIN-SUFFIX,easysofthome.com,ChinaProxy
 DOMAIN-SUFFIX,easytocn.com,ChinaProxy
 DOMAIN-SUFFIX,easytomessage.com,ChinaProxy
@@ -13223,6 +13230,7 @@ DOMAIN-SUFFIX,examw.com,ChinaProxy
 DOMAIN-SUFFIX,exands.com,ChinaProxy
 DOMAIN-SUFFIX,exc118.com,ChinaProxy
 DOMAIN-SUFFIX,excelhome.net,ChinaProxy
+DOMAIN-SUFFIX,excelpx.com,ChinaProxy
 DOMAIN-SUFFIX,exceltip.net,ChinaProxy
 DOMAIN-SUFFIX,exdoll.com,ChinaProxy
 DOMAIN-SUFFIX,exhera.com,ChinaProxy
@@ -15621,6 +15629,7 @@ DOMAIN-SUFFIX,hcy.cc,ChinaProxy
 DOMAIN-SUFFIX,hczc.com,ChinaProxy
 DOMAIN-SUFFIX,cdn.com,ChinaProxy
 DOMAIN-SUFFIX,hd.cm,ChinaProxy
+DOMAIN-SUFFIX,hd00.com,ChinaProxy
 DOMAIN-SUFFIX,hd3p.com,ChinaProxy
 DOMAIN-SUFFIX,hd62.com,ChinaProxy
 DOMAIN-SUFFIX,hdarea.co,ChinaProxy
@@ -17287,6 +17296,7 @@ DOMAIN-SUFFIX,iluoshen.com,ChinaProxy
 DOMAIN-SUFFIX,iluoyang.com,ChinaProxy
 DOMAIN-SUFFIX,ilvping.com,ChinaProxy
 DOMAIN-SUFFIX,ilvxing.com,ChinaProxy
+DOMAIN-SUFFIX,im020.com,ChinaProxy
 DOMAIN-SUFFIX,im170.com,ChinaProxy
 DOMAIN-SUFFIX,im200.com,ChinaProxy
 DOMAIN-SUFFIX,im286.com,ChinaProxy
@@ -19425,6 +19435,7 @@ DOMAIN-SUFFIX,keyan.cc,ChinaProxy
 DOMAIN-SUFFIX,keydot.net,ChinaProxy
 DOMAIN-SUFFIX,keyfc.net,ChinaProxy
 DOMAIN-SUFFIX,keyigroup.com,ChinaProxy
+DOMAIN-SUFFIX,keylol.com,ChinaProxy
 DOMAIN-SUFFIX,hk.com,ChinaProxy
 DOMAIN-SUFFIX,keyuhome.com,ChinaProxy
 DOMAIN-SUFFIX,keyunzhan.com,ChinaProxy
@@ -20267,6 +20278,7 @@ DOMAIN-SUFFIX,lelezone.com,ChinaProxy
 DOMAIN-SUFFIX,lelife.com,ChinaProxy
 DOMAIN-SUFFIX,lemai.com,ChinaProxy
 DOMAIN-SUFFIX,lemall.com,ChinaProxy
+DOMAIN-SUFFIX,lemicp.com,ChinaProxy
 DOMAIN-SUFFIX,lemo.me,ChinaProxy
 DOMAIN-SUFFIX,lemonme.net,ChinaProxy
 DOMAIN-SUFFIX,lemote.com,ChinaProxy
@@ -20332,6 +20344,7 @@ DOMAIN-SUFFIX,letvimg.com,ChinaProxy
 DOMAIN-SUFFIX,letvlb.com,ChinaProxy
 DOMAIN-SUFFIX,letwind.com,ChinaProxy
 DOMAIN-SUFFIX,letyo.com,ChinaProxy
+DOMAIN-SUFFIX,levect.com,ChinaProxy
 DOMAIN-SUFFIX,levitrai.com,ChinaProxy
 DOMAIN-SUFFIX,lewafan.com,ChinaProxy
 DOMAIN-SUFFIX,lewaila.com,ChinaProxy
@@ -23215,8 +23228,10 @@ DOMAIN-SUFFIX,ofcss.com,ChinaProxy
 DOMAIN-SUFFIX,offcn.com,ChinaProxy
 DOMAIN-SUFFIX,office68.com,ChinaProxy
 DOMAIN-SUFFIX,officedoyen.com,ChinaProxy
+DOMAIN-SUFFIX,officefans.net,ChinaProxy
 DOMAIN-SUFFIX,officese.com,ChinaProxy
 DOMAIN-SUFFIX,officezhushou.com,ChinaProxy
+DOMAIN-SUFFIX,officezu.com,ChinaProxy
 DOMAIN-SUFFIX,ofidc.com,ChinaProxy
 DOMAIN-SUFFIX,ofjy.org,ChinaProxy
 DOMAIN-SUFFIX,ofuns.com,ChinaProxy
@@ -23878,6 +23893,7 @@ DOMAIN-SUFFIX,pimei.com,ChinaProxy
 DOMAIN-SUFFIX,ad.com,ChinaProxy
 DOMAIN-SUFFIX,color.net,ChinaProxy
 DOMAIN-SUFFIX,qu.com,ChinaProxy
+DOMAIN-SUFFIX,pin5i.com,ChinaProxy
 DOMAIN-SUFFIX,pincai.com,ChinaProxy
 DOMAIN-SUFFIX,qu.com,ChinaProxy
 DOMAIN-SUFFIX,pingan.com,ChinaProxy
@@ -24095,6 +24111,7 @@ DOMAIN-SUFFIX,ppkao.com,ChinaProxy
 DOMAIN-SUFFIX,pplive.com,ChinaProxy
 DOMAIN-SUFFIX,pplock.com,ChinaProxy
 DOMAIN-SUFFIX,ppmoney.com,ChinaProxy
+DOMAIN-SUFFIX,ppmoney.net,ChinaProxy
 DOMAIN-SUFFIX,ppmsg.com,ChinaProxy
 DOMAIN-SUFFIX,ppmsg.net,ChinaProxy
 DOMAIN-SUFFIX,pppbj.com,ChinaProxy
@@ -24123,6 +24140,7 @@ DOMAIN-SUFFIX,pptvyun.com,ChinaProxy
 DOMAIN-SUFFIX,pptzs.com,ChinaProxy
 DOMAIN-SUFFIX,ppurl.com,ChinaProxy
 DOMAIN-SUFFIX,ppwan.com,ChinaProxy
+DOMAIN-SUFFIX,ppwwyyxx.com,ChinaProxy
 DOMAIN-SUFFIX,ppxclub.com,ChinaProxy
 DOMAIN-SUFFIX,ppys.net,ChinaProxy
 DOMAIN-SUFFIX,prada2.com,ChinaProxy
@@ -25821,6 +25839,7 @@ DOMAIN-SUFFIX,sf119.net,ChinaProxy
 DOMAIN-SUFFIX,sfacg.com,ChinaProxy
 DOMAIN-SUFFIX,sfb2c.com,ChinaProxy
 DOMAIN-SUFFIX,sfbest.com,ChinaProxy
+DOMAIN-SUFFIX,sfbuy.com,ChinaProxy
 DOMAIN-SUFFIX,sfcdn.org,ChinaProxy
 DOMAIN-SUFFIX,sfe8.com,ChinaProxy
 DOMAIN-SUFFIX,sfgj.org,ChinaProxy
@@ -28130,6 +28149,7 @@ DOMAIN-SUFFIX,tingclass.net,ChinaProxy
 DOMAIN-SUFFIX,tingfree.com,ChinaProxy
 DOMAIN-SUFFIX,tinghaod.com,ChinaProxy
 DOMAIN-SUFFIX,tingke8.com,ChinaProxy
+DOMAIN-SUFFIX,tingps.com,ChinaProxy
 DOMAIN-SUFFIX,tingroom.com,ChinaProxy
 DOMAIN-SUFFIX,tingvoa.com,ChinaProxy
 DOMAIN-SUFFIX,tingyulou.com,ChinaProxy
@@ -29697,6 +29717,7 @@ DOMAIN-SUFFIX,wangrunyu.com,ChinaProxy
 DOMAIN-SUFFIX,wangsanmu.com,ChinaProxy
 DOMAIN-SUFFIX,wangshidi.com,ChinaProxy
 DOMAIN-SUFFIX,wangsu.com,ChinaProxy
+DOMAIN-SUFFIX,wangsucloud.com,ChinaProxy
 DOMAIN-SUFFIX,wangting.net,ChinaProxy
 DOMAIN-SUFFIX,wangtu.com,ChinaProxy
 DOMAIN-SUFFIX,wangtuitui.com,ChinaProxy
@@ -30635,6 +30656,7 @@ DOMAIN-SUFFIX,wsbuluo.com,ChinaProxy
 DOMAIN-SUFFIX,wscdns.com,ChinaProxy
 DOMAIN-SUFFIX,wscloudcdn.com,ChinaProxy
 DOMAIN-SUFFIX,wscloudsec.com,ChinaProxy
+DOMAIN-SUFFIX,wscvdns.com,ChinaProxy
 DOMAIN-SUFFIX,wsdaren.com,ChinaProxy
 DOMAIN-SUFFIX,wsdccq.com,ChinaProxy
 DOMAIN-SUFFIX,wsdns.cc,ChinaProxy
@@ -30653,6 +30675,9 @@ DOMAIN-SUFFIX,ssc.com,ChinaProxy
 DOMAIN-SUFFIX,wstdw.com,ChinaProxy
 DOMAIN-SUFFIX,wstx.com,ChinaProxy
 DOMAIN-SUFFIX,wsview.com,ChinaProxy
+DOMAIN-SUFFIX,wswebpic.com,ChinaProxy
+DOMAIN-SUFFIX,wswebpic.info,ChinaProxy
+DOMAIN-SUFFIX,wswebpic.org,ChinaProxy
 DOMAIN-SUFFIX,wsxddg.com,ChinaProxy
 DOMAIN-SUFFIX,cn01.net,ChinaProxy
 DOMAIN-SUFFIX,wt8.com,ChinaProxy
@@ -30906,6 +30931,7 @@ DOMAIN-SUFFIX,xanahotelle.com,ChinaProxy
 DOMAIN-SUFFIX,xank120.com,ChinaProxy
 DOMAIN-SUFFIX,xaonline.com,ChinaProxy
 DOMAIN-SUFFIX,xaoyo.com,ChinaProxy
+DOMAIN-SUFFIX,xapbeta.com,ChinaProxy
 DOMAIN-SUFFIX,xapcn.com,ChinaProxy
 DOMAIN-SUFFIX,xaps2011.com,ChinaProxy
 DOMAIN-SUFFIX,xaredian.com,ChinaProxy
@@ -33392,6 +33418,7 @@ DOMAIN-SUFFIX,yzrb.com,ChinaProxy
 DOMAIN-SUFFIX,yzs.com,ChinaProxy
 DOMAIN-SUFFIX,yzs.me,ChinaProxy
 DOMAIN-SUFFIX,yzsqxx.com,ChinaProxy
+DOMAIN-SUFFIX,yztown.net,ChinaProxy
 DOMAIN-SUFFIX,yztz.com,ChinaProxy
 DOMAIN-SUFFIX,yzw.cc,ChinaProxy
 DOMAIN-SUFFIX,yzwb.com,ChinaProxy
